--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   firebase_storage: ^12.4.4
   firebase_core: ^3.12.1
   flutter_dotenv: ^5.2.1
-  http: ^1.3.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
